fixed spacing on mobile UI

--- a/conference-ticket-generator-main/src/output.css
+++ b/conference-ticket-generator-main/src/output.css
@@ -40,6 +40,8 @@
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-lg: 32rem;
+    --container-3xl: 48rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-lg: 1.125rem;
@@ -52,14 +54,15 @@
     --text-4xl--line-height: calc(2.5 / 2.25);
     --text-6xl: 3.75rem;
     --text-6xl--line-height: 1;
-    --text-8xl: 6rem;
-    --text-8xl--line-height: 1;
     --font-weight-normal: 400;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
+    --leading-tight: 1.25;
     --radius-lg: 0.5rem;
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --font-Inconsolata: Inconsolata, monospace;
@@ -307,8 +310,8 @@
   .w-full {
     width: 100%;
   }
-  .max-w-\[375px\] {
-    max-width: 375px;
+  .max-w-\[1440px\] {
+    max-width: 1440px;
   }
   .flex-col {
     flex-direction: column;
@@ -380,6 +383,9 @@
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
+  }
+  .px-2\.5 {
+    padding-inline: calc(var(--spacing) * 2.5);
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
@@ -470,44 +476,9 @@
       --tw-ring-color: var(--color-blue-500);
     }
   }
-  .sm\:mx-auto {
-    @media (width >= 40rem) {
-      margin-inline: auto;
-    }
-  }
-  .sm\:flex {
-    @media (width >= 40rem) {
-      display: flex;
-    }
-  }
-  .sm\:min-h-screen {
-    @media (width >= 40rem) {
-      min-height: 100vh;
-    }
-  }
   .sm\:max-w-\[375px\] {
     @media (width >= 40rem) {
       max-width: 375px;
-    }
-  }
-  .sm\:flex-col {
-    @media (width >= 40rem) {
-      flex-direction: column;
-    }
-  }
-  .sm\:px-6 {
-    @media (width >= 40rem) {
-      padding-inline: calc(var(--spacing) * 6);
-    }
-  }
-  .sm\:py-8 {
-    @media (width >= 40rem) {
-      padding-block: calc(var(--spacing) * 8);
-    }
-  }
-  .lg\:max-w-\[1440px\] {
-    @media (width >= 64rem) {
-      max-width: 1440px;
     }
   }
   .lg\:bg-repeat {
@@ -515,22 +486,15 @@
       background-repeat: repeat;
     }
   }
-  .lg\:text-4xl {
+  .lg\:px-6 {
     @media (width >= 64rem) {
-      font-size: var(--text-4xl);
-      line-height: var(--tw-leading, var(--text-4xl--line-height));
+      padding-inline: calc(var(--spacing) * 6);
     }
   }
   .lg\:text-6xl {
     @media (width >= 64rem) {
       font-size: var(--text-6xl);
       line-height: var(--tw-leading, var(--text-6xl--line-height));
-    }
-  }
-  .lg\:text-8xl {
-    @media (width >= 64rem) {
-      font-size: var(--text-8xl);
-      line-height: var(--tw-leading, var(--text-8xl--line-height));
     }
   }
   .dark\:border-gray-600 {
